<resources>
    <string name="app_name">CarDealershipKt</string>
    <string name="about_model_toolbar">О модели</string>
    <string name="reviews_info">Посмотреть\nотзывы</string>
    <string name="specifications">Характеристики</string>
    <string name="general_information">Общая информация</string>
    <string name="general_information_description">Марка\nСтрана марки\nМодель\nЦвет\nКласс автомобиля\nКол-во дверей\nКол-во мест\nРасположение руля</string>
    <string name="engine">Двигатель</string>
    <string name="engine_description">Тип двигателя\nОбъём\nМощность\nКоробка передач</string>
    <string name="exploitation">Эксплуатация</string>
    <string name="exploitation_description">Ускорение\nПотребление</string>
    <string name="size">Размеры и объём</string>
    <string name="size_description">Длина\nШирина\nВысота\nОбъём багажника\nОбъём топливного бака</string>
    <string name="compilation">Подборка внедорожников</string>
    <string name="favorites">Закладки</string>
    <string name="no_favorites">Вы ещё ничего не добавили</string>
    <string name="settings">Настройки</string>
    <string name="users">Список пользователей</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="date">День рождения</string>
    <string name="mail">Почта</string>
    <string name="phone">Телефон</string>
    <string name="changes">Внести изменения</string>
    <string name="exit">Выйти из аккаунта</string>
    <string name="personal">Личные данные</string>
    <string name="log_as">Вход как</string>
    <string name="register_as">Регистрация как</string>
    <string name="log">Вход</string>
    <string name="register">Регистрация</string>
    <string name="user">Пользователь</string>
    <string name="admin">Администратор</string>
    <string name="dev">Разработчик</string>
    <string name="carofday">Предложение\nДНЯ!</string>
    <string name="price">Цена</string>
    <string name="alphabet">Алфавит</string>
    <string name="map">Салоны на карте</string>
    <string name="promo_id">Введите ID промо-автомобиля:</string>
    <string name="title_home">Домой</string>
    <string name="title_search">Поиск</string>
    <string name="title_user">Пользователь</string>
    <string name="map_understand">Понятно</string>
    <string name="title_map">Салоны на карте</string>
    <string name="map_top_title">Северный автосалон"</string>
    <string name="map_bottom_title">Южный автосалон"</string>
    <string name="map_start_title">Западный автосалон"</string>
    <string name="map_end_title">Восточный автосалон"</string>
    <string name="map_dealership_description">\nЧасы работы: ПН-ПТ 09:00-21:00\nКонтактный телефон: "</string>
    <string name="compilation_title">Подборка</string>
    <string name="access_denied">Ошибка доступа</string>
    <string name="del_bookmark">Закладка удалена</string>
    <string name="add_bookmark">Закладка добавлена</string>
    <string name="reg_for_bookmark">Для добавления закладок - зарегестрируйтесь</string>
    <string name="user_enter">Пользователь зашёл</string>
    <string name="not_user">Вы не являетесь обычным пользователем</string>
    <string name="not_admin">Вы не являетесь администратором</string>
    <string name="not_enter">Вход неудался.\nПопробуйте ещё раз</string>
    <string name="not_reg">При регистрации произошла ошибка.\nПопробуйте ещё раз</string>
    <string name="not_code">Неверный защитный код</string>
    <string name="not_pass">Пароли не совпадают</string>
    <string name="not_all_fields">Заполните все поля!</string>
    <string name="off_road">Внедорожник</string>
    <string name="sedan">Седан</string>
    <string name="sport_classic">Спорт классика</string>
    <string name="convertible">Кабриолет</string>
    <string name="reg_yes">успешно зарегестрировался</string>
    <string name="yes_changes">Изменения внесены</string>
    <string name="user_exit">Пользователь вышел из аккаунта</string>
    <string name="not_id">Неверный ID</string>
    <string name="change_role">Изменить роль на:</string>
    <string name="not_change_role">Вы не можете изменить свою роль</string>
    <string name="search">Поиск</string>
</resources>