<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/background_grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/action_bar_background"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings"
        app:titleTextColor="@color/items_color" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_registration_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal"
                android:textColor="@color/items_color"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/name"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_settings_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_registration_enter">

            </TextView>

            <EditText
                android:id="@+id/et_settings_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:maxLength="20"
                android:text="@string/name"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/tv_registration_enter" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/lastname"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_settings_lastname"
                app:layout_constraintTop_toBottomOf="@id/textView">

            </TextView>

            <EditText
                android:id="@+id/et_settings_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:maxLength="20"
                android:text="@string/lastname"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/date"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_settings_date"
                app:layout_constraintTop_toBottomOf="@id/textView2">

            </TextView>

            <EditText
                android:id="@+id/et_settings_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:maxLength="20"
                android:text="@string/date"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/mail"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_settings_mail"
                app:layout_constraintTop_toBottomOf="@id/textView3">

            </TextView>

            <EditText
                android:id="@+id/et_settings_mail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:maxLength="20"
                android:text="@string/mail"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@id/textView3" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                app:layout_constraintHorizontal_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/phone"
                android:textSize="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/et_settings_phone"
                app:layout_constraintTop_toBottomOf="@id/textView4">

            </TextView>

            <EditText
                android:id="@+id/et_settings_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="2"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:maxLength="20"
                android:text="@string/phone"
                android:textSize="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@id/textView4" />

            <Button
                android:id="@+id/btn_user_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/items_color"
                android:onClick="onPush"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/changes"
                android:textAllCaps="false"
                android:textColor="@color/button_green"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_red"
        android:layout_marginTop="40dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/cv_registration">

    </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>